# colab.reaper.wing

./: .gitignore  CMakeLists.txt  INSTALL.md  QUICKSTART.md  README.md  config.json  create_installer_pkg.sh  deploy.sh  discover_osc_paths.py  install_macos.sh  monitor_osc_messages.py  probe_input_stereo.py  probe_io_tree.py  probe_mode.py  probe_usr_stereo.py  read_pdf.py  scan_source_stereo.py  scan_stereo.py  test_osc_paths.py
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  USER_GUIDE.md
include/: osc_routing.h  wing_config.h  wing_osc.h
include/internal/: logger.h  osc_builder.h  osc_helpers.h  platform_util.h  settings_dialog_macos.h  string_format.h  wing_connector_dialog_macos.h
include/wingconnector/: reaper_extension.h  track_manager.h  wing_config.h  wing_osc.h
packaging/: create_installer_linux.sh  create_installer_macos.sh  create_installer_windows.ps1
releases/: README.md
snapshots/: README.md
src/: logger.cpp  main.cpp  osc_builder.cpp  osc_routing.cpp  reaper_extension.cpp  wing_config.cpp  wing_connector_dialog_macos.mm  wing_osc.cpp
src/core/: osc_routing.cpp  wing_osc.cpp
src/extension/: main.cpp  reaper_extension.cpp
src/track/: track_manager.cpp
src/ui/: settings_dialog_macos.mm  wing_connector_dialog_macos.mm
src/utilities/: logger.cpp  platform_util.cpp  string_format.cpp  wing_config.cpp
